--- a/front/src/styles/blog/BlogEditator.module.css
+++ b/front/src/styles/blog/BlogEditator.module.css
@@ -3,6 +3,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    margin-top: 60px;
 }
 
 .title, .editor, .buttons, .trueEditor  {
