--- a/front/src/styles/Contato.module.scss
+++ b/front/src/styles/Contato.module.scss
@@ -1,9 +1,9 @@
 @import url(https://fonts.googleapis.com/css?family=Lobster);
 
 $bg-color: #d0e1d0;
-$text-color1: #284b2c;
-$text-color2: #26959d;
-$text-color3: #12565bdf;
+$text-color1: #7a4228;
+$text-color2: #6e3a20;
+$text-color3: #833f20;
 
   .title {
     margin-top: 10px;
