--- a/front/src/styles/blog/PostsBlogHome.module.css
+++ b/front/src/styles/blog/PostsBlogHome.module.css
@@ -1,7 +1,7 @@
 .biggestContainer {
   display: flex;
   align-items: center;
-  color: violet;
+  color: #411c12;
   flex-direction: column;
   flex-wrap: wrap;
 }
@@ -15,7 +15,7 @@
 }
 
 .a {
-  color:blueviolet;
+  color:#1a0b07; 
 
 }
 
