--- a/front/src/styles/terapy/TerapiasHome.module.css
+++ b/front/src/styles/terapy/TerapiasHome.module.css
@@ -1,11 +1,10 @@
 .theRealBiggestContainer {
   max-width: 100vw;
-  max-height: 120vh;
-  height: 120vh;
+  max-height: 140vh;
+  height: 140vh;
   display: flex;
   align-items: center;
   justify-content: center;
-  background: linear-gradient(-80deg, #20180e, #372d25, #0d0c0d, #36383a);
 }
 
 .biggestContainer {
@@ -20,12 +19,12 @@
 }
 
 .a {
-  color:#dde1d3;
+  color:#140f10;
 
 }
 
 .a:hover {
-  color:#f9f2f4 -2px 1px;
+  color:#bc0c2a -2px 1px;
 }
 
 
@@ -33,10 +32,10 @@
     max-width:  470px;
     width: 50vw;
     min-width: 370px;
-    text-shadow: #140f10 -2px 1px;
+    text-shadow: #dde1d3 -2px 1px;
     font-weight: 900;
     display: flex;
-    color: #dde1d3;
+    color: #140f10;
     flex-direction: column;
     flex-wrap: wrap;
     text-align: center;
