--- a/front/src/styles/globals.css
+++ b/front/src/styles/globals.css
@@ -4,9 +4,9 @@
 *,
 *::before,
 *::after {
-  margin: 0;
+  margin: 0 !important;
   padding: 0;
-  box-sizing: border-box;
+  box-sizing: border-box !important;
 }
 .rdw-editor-main {
   min-height: 50vh !important;
@@ -60,8 +60,8 @@ body, body * {
   background: linear-gradient(-45deg, #1b0903, #111112, #151616, #1a0803);
   width: 100vw;
   z-index: 999;
-  /* margin-bottom: 20px !important; */
 }
+
 
 .header * {
   color: white !important;
@@ -90,7 +90,7 @@ body, body * {
 }
 
 .content {
-  margin-top: 160px !important;
+  margin-top: 160px;
 }
 
 
