--- a/front/src/styles/Footer.module.css
+++ b/front/src/styles/Footer.module.css
@@ -2,7 +2,7 @@
 .footer {
   background-color: rgba(0, 0, 0, 0.571);
   min-height: 80px;
-  height: 100%;
+  height: 100% !important;
   min-width: 100vw;
   display: flex;
   justify-content: center;
@@ -11,7 +11,7 @@
 
   .rowFooter {
     text-align: center;
-    height: 100%;
+    height: 100% !important;
     display: flex;
     flex-direction: column-reverse;
     flex-wrap: wrap;
