--- a/front/src/styles/globals.css
+++ b/front/src/styles/globals.css
@@ -118,7 +118,7 @@ body, body * {
   display: flex;
   flex: 1;
   flex-direction: column;
-  height:100%;
+  height:100% !important;
   width: 100%;
  }
  
@@ -142,6 +142,7 @@ body, body * {
 html, body, #__next {
   height: 100% !important;
   overflow-x: hidden;
+  overflow-y: auto !important;
   max-height: 100vh !important;
   margin: 0;
   padding:0;
