--- a/front/src/styles/Footer.module.css
+++ b/front/src/styles/Footer.module.css
@@ -1,17 +1,19 @@
 
 .footer {
+  margin-top: 20px;
   background-color: rgba(0, 0, 0, 0.571);
   min-height: 80px;
-  height: 100% !important;
+  height: 100%;
   min-width: 100vw;
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 999;
 }
 
   .rowFooter {
     text-align: center;
-    height: 100% !important;
+    height: 100%;
     display: flex;
     flex-direction: column-reverse;
     flex-wrap: wrap;
