--- a/front/src/styles/Firstbanner.module.css
+++ b/front/src/styles/Firstbanner.module.css
@@ -90,6 +90,7 @@
         align-items: center;
         flex-wrap: nowrap;
         max-width: 100vw;
+        max-height: 120vh !important;
       }
       .bioText {
         text-align: center;
