fix: os posts do blog agora respeitam o tamanho da fonte definida pela administradora do site

--- a/front/src/styles/blog/TextBlogId.module.css
+++ b/front/src/styles/blog/TextBlogId.module.css
@@ -5,6 +5,11 @@
     margin-top: 70px;
 }
 
+.content {
+    font-size: inherit !important; 
+    line-height: inherit !important;
+  }
+  
 .container {
     max-width: 860px;
      display: flex; 
