fix: Consertando o tamanho da fonte nos cards

--- a/front/src/styles/blog/CardsText.module.css
+++ b/front/src/styles/blog/CardsText.module.css
@@ -5,6 +5,10 @@
     margin: 20px
 }
 
+.ListGroupItem p span {
+    font-size: 14px !important ;
+}
+
 .CardBody {
     display: flex;
     justify-content: space-between;
